--- a/style.css
+++ b/style.css
@@ -5,15 +5,18 @@ body{
 h1{
     font-size: 50px;
 }
+p{text-align: justify;}
 .orange-color{
     color:orange
 }
 section{
     display: flex;
+    margin-bottom: 100px;
 }
 .half-width{
     width: 50%;
-    padding-left: 8%;
+    padding-left: 5%;
+    padding-right: 5%;
     padding-top: 5%;
 }
 .half-width img{
@@ -30,4 +33,9 @@ section{
 .top-banner{
     background-image: url(image/top-banner.png);
     background-repeat: no-repeat;
+}
+.dream-big{
+    background-image: url(image/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
