--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ p{text-align: justify;}
 .orange-color{
     color:orange
 }
-section{
+.flexible-container{
     display: flex;
     margin-bottom: 100px;
 }
@@ -17,7 +17,7 @@ section{
     width: 50%;
     padding-left: 5%;
     padding-right: 5%;
-    padding-top: 5%;
+    padding-top: 3%;
 }
 .half-width img{
     width: 90%
