--- a/style.css
+++ b/style.css
@@ -58,3 +58,17 @@ p{
     border-radius: 10px;
     box-shadow: 10px 10px 40px grey;
 }
+#full-stack{
+    border-left: 7px solid tomato;
+}
+#baccha-web{
+    border-left: 7px solid blue;
+}
+
+.footer{
+    text-align: center;
+    padding-bottom: 50px;
+}
+.exp-title{
+    padding-left: 75px;
+}
